--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,10 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   },
+  "engines": {
+    "node": ">=18 <22",
+    "npm": ">=8"
+  },
   "overrides": {
     "@browserbasehq/stagehand": {
       "openai": "$openai"
