--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "kozi",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "backend"
+  ],
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "concurrently -n \"FRONTEND,BACKEND\" -c \"cyan,magenta\" \"vue-cli-service serve\" \"npm run -w backend dev\"",
+    "frontend": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "npm run -w backend dev"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "rwanda-geo-structure": "^1.3.10",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0",
-    "@fortawesome/fontawesome-free": "^7.0.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,8 +27,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
+  },
+  "engines": {
+    "node": ">=18 <22",
+    "npm": ">=8"
   },
   "eslintConfig": {
     "root": true,
