--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-vue": "^8.0.3"
   },
   "engines": {
-    "node": ">=18 <22",
+    "node": ">=18 <=22.15",
     "npm": ">=8"
   },
   "eslintConfig": {
