--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "kozi",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "backend"
-  ],
   "scripts": {
-    "serve": "concurrently -n \"FRONTEND,BACKEND\" -c \"cyan,magenta\" \"vue-cli-service serve\" \"npm run -w backend dev\"",
-    "frontend": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "backend": "npm run -w backend dev"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
@@ -30,10 +25,6 @@
     "concurrently": "^9.2.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
-  },
-  "engines": {
-    "node": ">=18 <=22.15",
-    "npm": ">=8"
   },
   "eslintConfig": {
     "root": true,
