--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.backup
+backend/.env.backup
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
