--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon src/server.js",
     "build": "npx prisma generate",
     "start": "node src/server.js",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "load-knowledge-base": "node src/config/loadKnowledgeBase.js"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +41,7 @@
     "nodemon": "^3.1.10",
     "openai": "^6.2.0",
     "p-limit": "^7.1.1",
+    "pdf-parse": "^1.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.26",
